Made new changes during practical 9

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>The first paragraph</p>
     <p>The second paragraph</p>
     <p>yes, this is the third paragraph</p>
+	<p>New line while working on ngrok and CI</p>
   </body>
   <footer>
     Original work by ylloo
